--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 window.onload = function() {
 	var map = initMap('mapid')
 	map.setZoom(4)
-	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
+	map.panTo([ 34.994315,135.770223 ]) // GEST  HOUSE
 }
 
 </script>
