--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <script src="https://fukuno.jig.jp/fukuno.js"></script>
 <script src="https://code4fukui.github.io/egmapjs/sparql.js"></script>
 <script>"use strict"
-
+<li><a href=map2.html>ピンを表示する（ポリゴン、領域も） map2.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map2.html>プログラム</a></li>
+	
 window.onload = function() {
 	var map = initMap('mapid')
 	map.setZoom(4)
 	map.panTo([ 34.994315,135.770223 ]) // GEST  HOUSE
+	
 }
 
 </script>
