--- a/index.html
+++ b/index.html
@@ -26,8 +26,22 @@ window.onload = function() {
 body { margin: 0; font-family: sans-serif; text-align: center; }
 h1 { font-size: 5vw; margin: 0; }
 #mapid { height: 60vh; }
-<li><a href=map2.html>ピンを表示する（ポリゴン、領域も） map2.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map2.html>プログラム</a></li>
+
 </style></head><body>
+	
+<ol>
+	<li><a href=map1.html>地図を表示する map1.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map1.html>プログラム</li>
+	<li><a href=map2.html>ピンを表示する（ポリゴン、領域も） map2.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map2.html>プログラム</a></li>
+	<li><a href=map3.html>APIを使って表示する(SPARQL) map3.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map3.html>プログラム</a></li>
+	<li><a href=map4.html>駐車場マップをつくる(SPARQL) map4.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map4.html>プログラム</a></li>
+	<li><a href=map5.html>エリアで絞り込む(SPARQL) map5.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map5.html>プログラム</a></li>
+	<li><a href=map6.html>GPS使って、いまここマップ map6.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map6.html>プログラム</a></li>
+	<li><a href=map7.html>消火栓へゴー map7.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map7.html>プログラム</a></li>
+	<li><a href=map8.html>電源マップ鯖江 map8.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map8.html>プログラム</a></li>
+	<li><a href=map9.html>WiFiマップ鯖江 map9.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/map9.html>プログラム</a></li>
+	<li><a href=mapA.html>経路探索サンプル mapA.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/mapA.html>プログラム</a></li>
+	<li><a href=mapB.html>ハッシュで移動（駐車場マップ） mapB.html</a> <a href=https://github.com/code4fukui/egmapjs/blob/master/mapB.html>プログラム</a></li>
+</ol>
 
 <h1>GEST MAP</h1>
 <div id="mapid"></div>
