--- a/index.html
+++ b/index.html
@@ -13,22 +13,7 @@
 <script>"use strict"
 
 	
-window.onload = function() {
-	var map = initMap('mapid')
-	map.setZoom(4)
-	map.panTo([ 34.994315,135.770223 ]) // GEST  HOUSE
-	
-}
-
-</script>
-<style>
-
-body { margin: 0; font-family: sans-serif; text-align: center; }
-h1 { font-size: 5vw; margin: 0; }
-#mapid { height: 60vh; }
-
-</style></head><body>
-	
+<script>"use strict"
 window.onload = function() {
 	var map = initMap('mapid')
 	map.setZoom(16)
@@ -54,6 +39,7 @@ window.onload = function() {
 	    [ 35.941, 136.191 ]
 	], { color: 'green' }))
 }
+</script>
 
 <h1>GEST MAP</h1>
 <div id="mapid"></div>
