--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"/>
 
-<title>gest map</title>
+<title>鴨川ライブマップ</title>
 
+<link rel="apple-touch-icon" href="app-icon.png"/>
+<meta property="og:image" content="ogp-image.jpg"/>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"/>
+<script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+<script src="https://code4fukui.github.io/egmapjs/egmap.js"></script>
+<link rel="stylesheet" href="https://code4fukui.github.io/egmapjs/egmap.css"/>
+<script src="https://fukuno.jig.jp/fukuno.js"></script>
+<script src="https://code4fukui.github.io/egmapjs/sparql.js"></script>
+<script>"use strict"
+window.onload = function() {
+	var map = initMap('mapid')
+	map.setZoom(4)
+	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
+}
+</script>
+<style>
+body { margin: 0; font-family: sans-serif; text-align: center; }
+h1 { font-size: 5vw; margin: 0; }
+#mapid { height: 60vh; }
+</style></head><body>
 
-<h1>GEST MAP</h1>
+<h1>鴨川ライブマップ</h1>
 <div id="mapid"></div>
 
 <img id=qrcode><script>addEventListener("load", () => qrcode.src = "https://chart.apis.google.com/chart?chs=140x140&cht=qr&chl=" + encodeURIComponent(document.location))</script><br>
