--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ window.onload = function() {
 	var map = initMap('mapid')
 	map.setZoom(4)
 	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
+	map.addIcon(35.005481,135.771467 , "Hana道場", "icon/hanadojo.png", 64)
 }
 </script>
 <style>
