--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <script>"use strict"
 window.onload = function() {
 	var map = initMap('mapid')
-	map.setZoom(4)
+	map.setZoom(50)
 	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
-	map.addIcon(35.005481,135.771467 , "Hana道場", "icon/hanadojo.png", 64)
+	map.addIcon(35.005481,135.771467 , "空", "icon/hanadojo.png", 64)
 }
 </script>
 <style>
