--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ window.onload = function() {
 	var map = initMap('mapid')
 	map.setZoom(50)
 	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
-	map.addIcon(35.005481,135.771467 , "空", "https://lh3.googleusercontent.com/s7VSoqvEo3sTYoV4vgXmcabmepcEIh2e1TxxFSuGJj6Fwq0PxD8MjvTIZW5V7jP3AQjWcQ=s85", 64)
+	map.addIcon(35.005481,135.771467 , "空", "mi.ping", 64)
 }
 </script>
 <style>
