--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 window.onload = function() {
 	var map = initMap('mapid')
 	map.setZoom(50)
-	map.panTo([ 35.943560,136.188917 ]) // 鯖江駅
-	map.addIcon(35.005481,135.771467 , "空", "mi.ping", 64)
+	map.panTo([ 35.005481,135.771467 ]) // 鯖江駅
+	map.addIcon(35.005481,135.771467 , "空", "mi.png", 64)
 }
 </script>
 <style>
