--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <script>"use strict"
 window.onload = function() {
 	var map = initMap('mapid')
-	map.setZoom(50)
-	map.panTo([ 35.005481,135.771467 ]) // 鯖江駅
-	map.addIcon(35.005481,135.771467 , "空", "mi.png", 64)
+	map.setZoom(100)
+	map.panTo([ 35.007731,135.771789 ]) // 鯖江駅
+	map.addIcon(35.005481,135.771467 , "空", "images.png", 64)
 }
 </script>
 <style>
